asg/tests/pass/integers/u16/min.leo
function main() {
    const a: u16 = 0;
}